final changes ready

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://cdn.midjourney.com/1cc295d9-ae26-4e64-b567-9ce7a0a1011d/0_3.webp");
+    background-image: url("https://cdn.midjourney.com/9f7ad12d-560f-446e-93fa-f2e6e81831b9/0_2.webp");
     background-repeat: repeat;
 }
 
@@ -9,10 +9,11 @@ body {
     flex-wrap: wrap;
     width: 500px;
     margin: 0 auto;
+    border-radius: 2%;
     color: rgb(255, 255, 255);
     text-align: center;
     margin-top: 100px;
-    border: 1px dotted black;
-    border-radius: 100%;
-    box-shadow: 50px 10px 10px rgba(0, 0, 0, 0.553);
+    outline: 1px dotted rgba(0, 0, 0, 0.612);
+    text-shadow: rgb(0, 0, 0) 2px 0 15px;
+    box-shadow: 20px 10px 10px rgba(0, 0, 0, 0.553);
 }
